--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "nrs-language-server"
+name = "hir-language-server"
 version = "0.1.0"
 edition = "2021"
 
@@ -16,5 +16,3 @@ serde = { version = "1.0", features = ["derive"] }
 dashmap = "5.1.0"
 log = "0.4.14"
 im-rc = "15.0.0"
-
-
