--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "nrs-language-client",
+	"name": "hir-language-client",
 	"description": "VSCode part of a language server",
 	"license": "MIT",
 	"version": "0.0.1",
