--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,19 +5,8 @@
 	"tasks": [
 		{
 			"type": "npm",
-			"script": "compile",
-			"group": "build",
-			"presentation": {
-				"panel": "dedicated",
-				"reveal": "never"
-			},
-			"problemMatcher": [
-				"$tsc"
-			]
-		},
-		{
-			"type": "npm",
 			"script": "watch",
+			"path": "vscode-extension",
 			"isBackground": true,
 			"group": {
 				"kind": "build",
@@ -25,7 +14,7 @@
 			},
 			"presentation": {
 				"panel": "dedicated",
-				"reveal": "never"
+				"reveal": "silent"
 			},
 			"problemMatcher": [
 				"$tsc-watch"
