VS Code: Configure word boundaries

--- a/vscode-extension/hir-language-configuration.json
+++ b/vscode-extension/hir-language-configuration.json
@@ -12,5 +12,6 @@
     ["[", "]"],
     ["(", ")"],
     ["\"", "\""]
-  ]
+  ],
+  "wordPattern": "(-?\\d*\\.\\d\\w*)|(-?0x\\d*)|([a-zA-Z0-9_@%!][a-zA-Z0-9_:]+[a-zA-Z0-9_])"
 }
