--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -54,7 +54,11 @@
 		"@typescript-eslint/parser": "^6.7.5",
 		"@vscode/vsce": "^2.21.1",
 		"esbuild": "^0.19.4",
-		"eslint": "^8.5.1",
+		"eslint": "^8.51.0",
+		"eslint-config-standard-with-typescript": "^39.1.1",
+		"eslint-plugin-import": "^2.25.2",
+		"eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
+		"eslint-plugin-promise": "^6.0.0",
 		"typescript": "^5.2.2"
 	}
 }
