--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,11 @@ concurrency:
 jobs:
   build_lsp_native:
     name: Build Language Server Standalone
-    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu, windows, macos]
+    runs-on: ${{ matrix.os }}-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -47,14 +51,17 @@ jobs:
       
       - uses: actions/upload-artifact@v3
         with:
-            name: hyper-ir-lsp
-            path: ./target/release/hyper-ir-lsp
+            name: hyper-ir-lsp-${{ matrix.os }}${{ runner.os == 'Windows' && '.exe' || '' }}
+            path: ./target/release/hyper-ir-lsp${{ runner.os == 'Windows' && '.exe' || '' }}
             retention-days: 1
             if-no-files-found: error 
 
   build_vscode_ext:
     name: Build VS Code extension
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ubuntu, windows, macos]
+    runs-on: ${{ matrix.os }}-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -115,7 +122,7 @@ jobs:
 
       - uses: actions/upload-artifact@v3
         with:
-            name: hyper-ir-lsp-0.0.1.vsix
+            name: hyper-ir-lsp-0.0.1.${{ matrix.os }}.vsix
             path: ./vscode-extension/hyper-ir-lsp-0.0.1.vsix
             retention-days: 1
             if-no-files-found: error 
