--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,14 @@
-name: Proof commit
+name: Build
 
-on: [push, pull_request]
+on:
+  push:
+  pull_request:
+  release:
+    types: [prereleased, released]
 
 permissions:
-  contents: read
+  # Write permissions needed for publishing the release
+  contents: write
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
@@ -11,7 +16,7 @@ concurrency:
 
 jobs:
   build_lsp_native:
-    name: Build Language Server Standalone
+    name: Build & Test Language Server
     strategy:
       fail-fast: false
       matrix:
@@ -39,6 +44,8 @@ jobs:
           restore-keys: ${{ runner.os }}-cargo-
 
       - name: Lint
+        # Only run the linter on Ubuntu to save some time
+        if: ${{ runner.os == 'Linux' }}
         run: |
           cargo fmt --all -- --check
           cargo clippy -- -D warnings
@@ -48,13 +55,28 @@ jobs:
 
       - name: Build Language Server
         run: cargo build --release --verbose
-      
-      - uses: actions/upload-artifact@v3
+
+      - name: Upload Workflow Artifact
+        uses: actions/upload-artifact@v4
         with:
             name: hyper-ir-lsp-${{ matrix.os }}${{ runner.os == 'Windows' && '.exe' || '' }}
             path: ./target/release/hyper-ir-lsp${{ runner.os == 'Windows' && '.exe' || '' }}
             retention-days: 1
-            if-no-files-found: error 
+            if-no-files-found: error
+
+      - name: Upload Release Artifact
+        if: ${{ github.event_name	== 'release' }}
+        shell: bash
+        run: |
+          upload_url=`echo '${{ github.event.release.upload_url }}' | cut -f1 -d"{"`;
+          gh api --method POST \
+            -H "Accept: application/vnd.github+json" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            "${upload_url}?name=hyper-ir-lsp-${{ matrix.os }}${{ runner.os == 'Windows' && '.exe' || '' }}" \
+            --input './target/release/hyper-ir-lsp${{ runner.os == 'Windows' && '.exe' || '' }}'
+        env:
+          GH_TOKEN: ${{ github.token }}
+
 
   build_vscode_ext:
     name: Build VS Code extension
@@ -103,13 +125,15 @@ jobs:
           path: ${{ env.STORE_PATH }}
           key: ${{ runner.os }}-pnpm-cache-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
-            ${{ runner.os }}-pnpm-cache-        
+            ${{ runner.os }}-pnpm-cache-
 
       - name: Install Javascript dependencies
         working-directory: vscode-extension
         run: npm install
 
       - name: Lint VSCode extension
+        # Only run the linter on Ubuntu to save some time
+        if: ${{ runner.os == 'Linux' }}
         working-directory: vscode-extension
         run: pnpm lint
 
@@ -120,9 +144,23 @@ jobs:
         working-directory: vscode-extension
         run: pnpm package
 
-      - uses: actions/upload-artifact@v3
+      - name: Upload Workflow Artifact
+        uses: actions/upload-artifact@v4
         with:
             name: hyper-ir-lsp-0.0.1.${{ matrix.os }}.vsix
             path: ./vscode-extension/hyper-ir-lsp-0.0.1.vsix
             retention-days: 1
-            if-no-files-found: error 
+            if-no-files-found: error
+
+      - name: Upload Release Artifact
+        if: ${{ github.event_name	== 'release' }}
+        shell: bash
+        run: |
+          upload_url=`echo '${{ github.event.release.upload_url }}' | cut -f1 -d"{"`;
+          gh api --method POST \
+            -H "Accept: application/vnd.github+json" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            "${upload_url}?name=hyper-ir-lsp-0.0.1.${{ matrix.os }}.vsix" \
+            --input './vscode-extension/hyper-ir-lsp-0.0.1.vsix'
+        env:
+          GH_TOKEN: ${{ github.token }}
