--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -40,9 +40,10 @@
 		"watch": "node ./build.js --watch",
 		"test-compile": "tsc -p ./",
 		"lint": "eslint src --ext ts",
-		"build": "node ./build.js --release",
+		"build": "node ./build.js",
 		"package": "pnpm build && cd dist && vsce package --no-dependencies -o ..",
-		"publish": "pnpm build && cd dist && vsce publish --no-dependencies -o .."
+		"package:release": "pnpm build --release && cd dist && vsce package --no-dependencies -o ..",
+		"publish": "pnpm build --release && cd dist && vsce publish --no-dependencies -o .."
 	},
 	"dependencies": {
 		"vscode-languageclient": "^9.0.1"
